@@ -1,12 +1,8 @@
 AUX app.pri.in 249 RMD160 80fdd8850ff3a5f4c0424ce749d28f73617494d5 SHA1 2c5e24c3f73a8406e468658357e0d993f5b0c004 SHA256 98792316e42c48f22aeae1111b30880c9442b3515c1d3f5f8ea585ff30270da8
-AUX app.pri.in~ 302 RMD160 72c099ab5a06aa45339455bb339f5e807c9b8c43 SHA1 2e75a7db21e52651cad7fbe2845d74fc804e6648 SHA256 4df1e9f5de696ade3fefb3a26add7e7dcadde17986ab6a8eeffba736aed06481
-AUX conf.pri.in 525 RMD160 9dc5204255fdd9954ce2ec9ec3d001923460fd99 SHA1 079b8e13c00f4a96d724fb6b3967d8bb4ef5e5f2 SHA256 ecfc7a076e5f422af69569c9c11648bc792f7c052050b2778595be7f94e265d3
-AUX conf.pri.in~ 543 RMD160 202e08a4c4bf041774b638eb3f8cd7db09f36da6 SHA1 c09513dbc80f7836d564a63678e3d7fee26b4f46 SHA256 c6831ef8ca2e62dec8a47f65aae2a80d0d451dd11f9a419a535427cd22acf9f9
+AUX conf.pri.in 533 RMD160 b105d169207de318a67f46e27686bb6cedcc721b SHA1 e69fd52a96cb630357f3f763834df2b9a72719db SHA256 caf6cb1a6ff28592c5ecb19b042ba9a072b1d1a5ce45bed16a524120feb5822e
 AUX confapp.pri.in 18 RMD160 4d4e03e1ffebfbee5e121743368538bf406f949d SHA1 393162a783c502ca2cf9e6fd8190c392cbae8920 SHA256 cd6dd15f80d7a3becfa0cb4f55dcfaab269b08d9b67d0e5c7313cfae28751d26
-AUX confapp.pri.in~ 114 RMD160 52c6bd89b5c047da2b9fd437948ab7fa50a32108 SHA1 1d2e77c72a8bd421bcc6fb548a803440819a12f0 SHA256 a7391e2e8a1b39312a14e15ac86cf7540c520be92a1cb1811120ae2f513bdd52
 AUX qca-2.0.2-pcfilespath.patch 409 RMD160 65368cb474f2dd1d79b0c9d00424831acd777465 SHA1 a2defc2ae7d3dc31986f89cb8ec2760df85cb208 SHA256 d4d276c13f08bc538b79779aba49126b310df5c97f95b2c7010de050c880d695
 DIST qca-2.0.2.tar.bz2 1937201 RMD160 18b0f497709f9700227644977946735d2ec3c623 SHA1 5a414c3296cd37d1ec34182be0d089c5073f55a8 SHA256 49b5474450104a2298747c243de1451ab7a6aeed4bf7df43ffa4b7128a2837b8
-EBUILD qca-2.0.2-r2.ebuild 3301 RMD160 1179c9467b355325573622b12893497eb46eeaf2 SHA1 a22bbb3ed86c638e0d1a56b920b73487a5f67874 SHA256 a93ac27311f31013311980c8e5770ca17f65a4155a3882bb1bef9a4131dd0600
-MISC ChangeLog 9923 RMD160 43fc9eb5f1cfd2097518deebed475d0c3d17b8c7 SHA1 76fa3a83423b336acf42b02bff6a8a675d3fcd11 SHA256 43c15c9c93ef3654095f5dfe96a56472ab06bcec9de17c140f2ce4dd93e4833a
+EBUILD qca-2.0.2-r2.ebuild 2532 RMD160 466e23c61d1b8497ec009c1e4375e041f7cb3a7f SHA1 b69485e55f00f3469fbbfb94e22f316f6d296cc0 SHA256 466adc2cf0cca7f265a58cd38cf8d9ca0cfc29b2d6c3406e9551006229fa527b
+MISC ChangeLog 10165 RMD160 f9033c3adfc549c0575107321799058a175a6c69 SHA1 605207e381e410191120a65752a07208ad435dd3 SHA256 cf31ec9c0676d5bd204eac75d4fca28ba1d3f2c436223e13a115b2f2ec3d710b
 MISC metadata.xml 192 RMD160 421d4665996ea38fdfc756e2da700603abe17ec7 SHA1 c32af4b790776c36b524e5f2e2dca587c9cd3351 SHA256 e585d77a075b30463ad28cc89374f9ef2876636bca95a23321b824e0122aa6fd
-MISC qca-2.0.2-r2.ebuild~ 2620 RMD160 fd9460c749729addd92dab5eecd9ebdc21cc13e3 SHA1 f6c9a2425ce32c9a8164f06e33f1997c4fc7a8d8 SHA256 a84746f2491b94def512e1cc7fdffaa3e44eec5d570e30568215b456e41c63b4
