@@ -1,29 +1,0 @@
-### eqmake4 was here ###
-# qconf
-
-PREFIX = /usr
-BINDIR = /usr/bin
-INCDIR = /usr/include/qca2
-LIBDIR = /usr/lib64/qca2
-DATADIR = /usr/share
-
-CONFIG += release
-
-DEFINES += DATADIR=\\\"$$DATADIR/qca\\\"
-
-QCA_NO_TESTS = 1
-
-prffiles.path = /usr/share/qt4/mkspecs/features
-prffiles.files = crypto.prf
-INSTALLS += prffiles
-
-pcfiles.path = $$LIBDIR/../pkgconfig
-pcfiles.files = lib/pkgconfig/qca2.pc
-INSTALLS += pcfiles
-
-DEFINES += QCA_SYSTEMSTORE_PATH=\\\"/etc/ssl/certs/ca-certificates.crt\\\"
-
-
-
-CONFIG -= debug_and_release debug
-CONFIG += release
