@@ -1,6 +1,0 @@
-### eqmake4 was here ###
-BINDIR = /usr/bin
-CONFIG += release
-
-CONFIG -= debug_and_release debug
-CONFIG += release
